Wed Apr 24 12:54:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/socket/lib/socket.rb: Doc typos by @vipulnsward [Fixes GH-292]

Wed Apr 24 12:27:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* array.c: Fix documentation for Array#index and #replace aliases
	  Based on a patch by @phiggins [Fixes GH-282]

Tue Apr 23 21:14:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): refix r40413, on Ruby 1.9 usual character
	  escape uses hex/Unicode escapes, so fix to use Unicode escape on
	  Unicode strings and hex on others. [ruby-core:54458] [Bug #8290]

Tue Apr 23 20:10:02 2013  Tanaka Akira  <akr@fsij.org>

	* missing/isnan.c (isnan): Don't define if isnan() macro is defined.
	  This fixes a compilation failure on uClibc based Gentoo system.

Tue Apr 23 17:40:40 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/rexml/document.rb, lib/rexml/element.rb,
	  lib/rexml/formatters/pretty.rb: remove opinionated
	  language in documentation. [Bug #8309],
	  reported by Charles Beckmann

Tue Apr 23 14:04:44 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (getacl_response): parse the mailbox of an ACL
	  response correctly.  [ruby-core:54365] [Bug #8281]

Tue Apr 23 11:58:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scrub): fix for UTF-32.  strlen() on strings
	  contain NUL returns wrong result, use sizeof operator instead.
	  [ruby-dev:45975] [Feature #6752]

Tue Apr 23 10:26:50 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_module.rb
	  (TestModule#test_const_get_invalid_name)
	  (test_const_defined_invalid_name): Fix expected values.

Tue Apr 23 09:51:26 2013  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_inspect): NUL should not be represented as "\0"
	  when octal digits may follow.  [ruby-core:54458] [Bug #8290]

Mon Apr 22 22:54:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* insns.def (opt_mod): Use % operator if both operands are positive for